--- a/src-web/templates/sumbit.gohtml
+++ b/src-web/templates/sumbit.gohtml
@@ -1,18 +1,21 @@
-{{define "register-form"}}
+{{define "login-form"}}
     <form action="/auth" method="post">
         <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" placeholder="输入 email">
-            <small id="emailHelp" class="form-text text-muted">我们会严格保存您的邮箱</small>
+            <label for="apiKey">apiKey</label>
+            <input type="password" class="form-control" id="apiKey" placeholder="apiKey" name="apiKey">
         </div>
         <div class="form-group">
-            <label for="password">密码</label>
-            <input type="password" class="form-control" id="password" placeholder="密码" name="password">
+            <label for="apiSecret">apiSecret</label>
+            <input type="password" class="form-control" id="apiSecret" placeholder="apiSecret" name="apiSecret">
         </div>
         <div class="form-group">
-            <label for="password-again">确认密码</label>
-            <input type="password" class="form-control" id="password-again" placeholder="再次输入密码" name="password-again">
+            <label for="username">username</label>
+            <input type="password" class="form-control" id="usernameOrEmail" placeholder="usernameOrEmail" name="usernameOrEmail">
         </div>
-        <button type="submit" class="btn btn-primary">登录</button>
+        <div class="form-group">
+            <label for="password">password</label>
+            <input type="password" class="form-control" id="password" placeholder="password" name="password">
+        </div>
+        <button type="submit" class="btn btn-primary">发送请求</button>
     </form>
 {{end}}
