--- a/src-web/templates/sumbit.gohtml
+++ b/src-web/templates/sumbit.gohtml
@@ -1,21 +1,23 @@
 {{define "login-form"}}
     <form action="/auth" method="post">
         <div class="form-group">
-            <label for="apiKey">apiKey</label>
-            <input type="password" class="form-control" id="apiKey" placeholder="apiKey" name="apiKey">
+            <label for="apiKey">API KEY</label>
+            <input type="text" class="form-control" id="apiKey" placeholder="apiKey" name="apiKey">
         </div>
         <div class="form-group">
-            <label for="apiSecret">apiSecret</label>
+            <label for="apiSecret">API SECRET</label>
             <input type="password" class="form-control" id="apiSecret" placeholder="apiSecret" name="apiSecret">
         </div>
         <div class="form-group">
-            <label for="username">username</label>
-            <input type="password" class="form-control" id="usernameOrEmail" placeholder="usernameOrEmail" name="usernameOrEmail">
+            <label for="username">USERNAME</label>
+            <input type="text" class="form-control" id="usernameOrEmail" placeholder="usernameOrEmail" name="usernameOrEmail">
         </div>
         <div class="form-group">
-            <label for="password">password</label>
+            <label for="password">PASSWORD</label>
             <input type="password" class="form-control" id="password" placeholder="password" name="password">
         </div>
-        <button type="submit" class="btn btn-primary">发送请求</button>
+        <div style="text-align: center;">
+            <button type="submit" class="btn btn-primary btn-block">POST!</button>
+        </div>
     </form>
 {{end}}
