Add the login check, redirect the homepage when login failure.

--- a/src-web/templates/index.gohtml
+++ b/src-web/templates/index.gohtml
@@ -13,5 +13,8 @@
     <div class="modal-body">
         {{ template "login-form" }}
     </div>
+    <div class ="text-center">
+        <p class="text-danger"> {{ .error }} </p>
+    </div>
 </main>
 </body>
