--- a/src-web/templates/ProgressDisplayPage.gohtml
+++ b/src-web/templates/ProgressDisplayPage.gohtml
@@ -26,6 +26,7 @@
                     const processBarDivJson = JSON.parse(responseText)
                     processBarDiv.style.width = processBarDivJson.taskProcess + "%";
                     tempDebug.innerHTML = responseText
+                    processBarDiv.innerHTML = processBarDivJson.taskProcess.substring(0, 4) + "%"
                     if (processBarDivJson.taskProcess === "1") {
                         clearInterval(intervalID)
                     }
@@ -35,10 +36,10 @@
         const intervalID = setInterval("httpGetTest()", "1000");
     </script>
     <p id="tempDebug"> Init... </p>
-    <div class="progress">
-        <div id="processBarInfo" class="progress-bar progress-striped" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+    <div class="progress progress-striped active">
+        <div id="processBarInfo" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0"
              aria-valuemax="100" style="width:0%">
-            Crawling code...
+            init...
         </div>
     </div>
 </main>
