--- a/src-web/templates/Index.gohtml
+++ b/src-web/templates/Index.gohtml
@@ -10,11 +10,15 @@
 </head>
 <body>
 <main>
-    <div class="modal-body">
-        {{ template "login-form" }}
-    </div>
-    <div class ="text-center">
-        <p class="text-danger"> {{ .error }} </p>
+    <div class="d-flex flex-column min-vh-70 min-vw-70">
+        <div class="d-flex flex-column flex-grow-1 justify-content-center align-items-center">
+            <div class="modal-body" style="width:70%">
+                {{ template "login-form" }}
+            </div>
+            <div class ="text-center">
+                <em><p class="text-danger"> {{ .error }} </p></em>
+            </div>
+        </div>
     </div>
 </main>
 </body>
