--- a/src-web/templates/ProgressDisplayPage.gohtml
+++ b/src-web/templates/ProgressDisplayPage.gohtml
@@ -37,11 +37,16 @@
         }
         const intervalID = setInterval("httpGetTest()", "1000");
     </script>
-    <p id="tempDebug"> Init... </p>
-    <div class="progress progress-striped active">
-        <div id="processBarInfo" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-             aria-valuemax="100" style="width:0%">
-            init...
+    <div class="d-flex flex-column min-vh-70 min-vw-70">
+        <div class="d-flex flex-column flex-grow-1 justify-content-center align-items-center">
+            <p id="tempDebug"> Init... </p>
+            <div class="progress" style="width:70%">
+                <div id="processBarInfo" class="progress-bar progress-bar-striped bg-success" role="progressbar" aria-valuenow="70"
+                     aria-valuemin="0"
+                     aria-valuemax="100" style="width:0%">
+                    init...
+                </div>
+            </div>
         </div>
     </div>
 </main>
