Add the download button. Ready to try the websocket push.

--- a/src-web/templates/ResultPage.gohtml
+++ b/src-web/templates/ResultPage.gohtml
@@ -11,5 +11,6 @@
 <body>
 <main>
     {{ .resultBody }}
+    <a href="/download/{{ .RandomTaskName }}"><button>Download the zip archive</button></a>
 </main>
 </body>
