Real-time display of info, restricted to a fixed window.

--- a/src-web/templates/ProgressDisplayPage.gohtml
+++ b/src-web/templates/ProgressDisplayPage.gohtml
@@ -31,7 +31,7 @@
     </div>
     <div class="d-flex flex-column min-vh-70 min-vw-70">
         <div class="d-flex flex-column flex-grow-1 justify-content-center align-items-center">
-            <div style="height:80%;width:70%;overflow:auto;border-radius:10px;background-color:#f0f0f4;margin-top: 30px">
+            <div id="logViewerDiv" style="height:calc(50vh);width:70%;overflow-y:scroll;border-radius:10px;background-color:#f0f0f4;margin-top:calc(5vh);flex-direction:column-reverse;">
                 <pre><code id="logViewer"></code></pre>
             </div>
         </div>
