Beautification of the remaining pages. Unwanted content was removed from the results page. Next, the logging and error handling sections need to be focused on.

--- a/src-web/templates/ProgressDisplayPage.gohtml
+++ b/src-web/templates/ProgressDisplayPage.gohtml
@@ -13,7 +13,7 @@
     <!-- highlight.js -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
-    <script >hljs.initHighlightingOnLoad();</script>
+    <script >hljs.highlightAll();</script>
 </head>
 <body>
 <main>
