Rewritten to use cookies to share mission UID in order to be thread-safe.

--- a/src-web/templates/ResultPage.gohtml
+++ b/src-web/templates/ResultPage.gohtml
@@ -16,7 +16,7 @@
                 Mission accomplished!
                 Please click the button below to download the code for the official player of that match!
             </div>
-            <a href="/download/{{ .RandomTaskName }}">
+            <a href="/download/{{ .MissionUID }}">
                 <button type="button" class="btn btn-primary btn-lg">Download the zip archive</button>
             </a>
         </div>
