Beautify the main page. Added a merged version of the log.

--- a/src-web/templates/Index.gohtml
+++ b/src-web/templates/Index.gohtml
@@ -18,6 +18,13 @@
             <div class ="text-center">
                 <em><p class="text-danger"> {{ .error }} </p></em>
             </div>
+            <div class="alert alert-primary", style="width: 70%">
+                <p style="font-family:'Times New Roman';font-size:large;margin:calc(1vh)">
+                Hello!
+                It is a tool to help you download all the official competitors of a codeforces contest, and it can help you are easy to detect code duplication.
+                If you have not yet applied for API KEY and API SECRET, please go to <strong><a href="https://codeforces.com/apiHelp">apiHelp</a></strong>.
+                </p>
+            </div>
         </div>
     </div>
 </main>
