--- a/src-web/templates/SubmitForm.gohtml
+++ b/src-web/templates/SubmitForm.gohtml
@@ -16,6 +16,10 @@
             <label for="password">PASSWORD</label>
             <input type="password" class="form-control" id="password" placeholder="password" name="password">
         </div>
+        <div class="form-group">
+            <label for="CID">Contest ID (It is pure digital)</label>
+            <input type="text" class="form-control" id="contest id" placeholder="CID" name="CID">
+        </div>
         <div style="text-align: center;">
             <button type="submit" class="btn btn-primary btn-block">POST!</button>
         </div>
