--- a/src-web/templates/Index.gohtml
+++ b/src-web/templates/Index.gohtml
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="/statics/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="/statics/css/bootstrap-reboot.min.css">
     <link href="/favicon.ico" rel="icon"/>
-    <script src="https://code.jquery.com/jquery-3.6.0.js" rel="script"></script>
-    <script src="https://unpkg.com/@popperjs/core@2.11.5/dist/umd/popper.min.js" rel="script"></script>
-    <script rel="script" src="/statics/js/bootstrap.bundle.js"></script>
+    <script src="/statics/js/jquery-3.6.0.js" rel="script"></script>
+    <script src="/statics/js/popper.min.js" rel="script"></script>
+    <script src="/statics/js/bootstrap.bundle.js" rel="script"></script>
 </head>
 <body>
 <main>
