--- a/src-web/templates/ProgressDisplayPage.gohtml
+++ b/src-web/templates/ProgressDisplayPage.gohtml
@@ -5,14 +5,15 @@
     <link rel="stylesheet" href="/statics/css/bootstrap.min.css">
     <link rel="stylesheet" href="/statics/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="/statics/css/bootstrap-reboot.min.ss">
-    <script src="https://code.jquery.com/jquery-3.6.0.js" rel="script"></script>
-    <script src="https://unpkg.com/@popperjs/core@2.11.5/dist/umd/popper.min.js" rel="script"></script>
+    <script src="/statics/js/jquery-3.6.0.js" rel="script"></script>
+    <script src="/statics/js/popper.min.js" rel="script"></script>
+    <script src="/statics/js/bootstrap.bundle.js" rel="script"></script>
     <!-- polling task AND websocket -->
     <script src="/statics/js/polling.js" rel="script"></script>
     <script src="/statics/js/websocket.js" rel="script"></script>
     <!-- highlight.js -->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
+    <link rel="stylesheet" href="/statics/css/default.min.css">
+    <script src="/statics/js/highlight.min.js"></script>
     <script >hljs.highlightAll();</script>
 </head>
 <body>
