--- a/src-web/templates/ResultPage.gohtml
+++ b/src-web/templates/ResultPage.gohtml
@@ -3,8 +3,8 @@
     <link rel="stylesheet" href="/statics/css/bootstrap.min.css">
     <link rel="stylesheet" href="/statics/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="/statics/css/bootstrap-reboot.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.js" rel="script"></script>
-    <script src="https://unpkg.com/@popperjs/core@2.11.5/dist/umd/popper.min.js" rel="script"></script>
+    <script src="/statics/js/jquery-3.6.0.js" rel="script"></script>
+    <script src="/statics/js/popper.min.js" rel="script"></script>
     <script rel="script" src="/statics/js/bootstrap.bundle.js"></script>
 </head>
 <body>
