--- a/src-web/templates/ProgressDisplayPage.gohtml
+++ b/src-web/templates/ProgressDisplayPage.gohtml
@@ -21,7 +21,7 @@
     {{ .TOKEN }}
     <div class="d-flex flex-column min-vh-70 min-vw-70">
         <div class="d-flex flex-column flex-grow-1 justify-content-center align-items-center">
-            <div class="alert alert-info" role="alert" style="width:70%">
+            <div class="alert alert-info" role="alert" style="width:70%;overflow:auto" >
                 Interface invocations: <b id="tempDebug"></b>
             </div>
             <div class="progress" style="width:70%">
