--- a/src-web/templates/ProgressDisplayPage.gohtml
+++ b/src-web/templates/ProgressDisplayPage.gohtml
@@ -4,7 +4,7 @@
     <!-- bootstrap -->
     <link rel="stylesheet" href="/statics/css/bootstrap.min.css">
     <link rel="stylesheet" href="/statics/css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="/statics/css/bootstrap-reboot.min.ss">
+    <link rel="stylesheet" href="/statics/css/bootstrap-reboot.min.css">
     <script src="/statics/js/jquery-3.6.0.js" rel="script"></script>
     <script src="/statics/js/popper.min.js" rel="script"></script>
     <script src="/statics/js/bootstrap.bundle.js" rel="script"></script>
